--- a/front-end/my-app/src/App.css
+++ b/front-end/my-app/src/App.css
@@ -8,8 +8,8 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .top-nav-icon {
+    animation: top-nav-icon-spin infinite 20s linear;
   }
 }
 
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: top;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -28,11 +28,16 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes top-nav-icon-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
+}
+
+.top-nav-icon {
+  height: 50px;
+  width: 50px;
 }
