--- a/front-end/my-app/src/App.css
+++ b/front-end/my-app/src/App.css
@@ -40,4 +40,17 @@
 .top-nav-icon {
   height: 50px;
   width: 50px;
+  margin-top: 15px;
+}
+
+.signup {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.login {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
