--- a/front-end/my-app/src/App.css
+++ b/front-end/my-app/src/App.css
@@ -1,5 +1,9 @@
 .App {
+  margin: 0;
   text-align: center;
+  padding: 0;
+  height: 100vh;
+  background: #000;
 }
 
 .App-logo {
@@ -14,7 +18,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background: #000;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -53,4 +57,42 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.vid {
+  position: absolute;
+  width: 100%;
+  left: 50%;
+  top: 50%;
+  height: 100%;
+  object-fit: cover;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
+
+.pulse {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 200%;
+  height: 200%;
+  background: url(/Users/tappy/Byte/Phase_3_Project/front-end/my-app/src/components/images/earth.png);
+  background-size: cover;
+  animation: animateEarth 6s linear infinite;
+  border-radius: 50%;
+  box-shadow: inset 0 0 40px  rgba(255, 255, 255, .5);
+  z-index: 0;
+}
+
+@keyframes animateEarth
+{
+  0%
+  {
+    background-position: 0 0;
+  }
+  100%
+  {
+    background-position: 719px 0;
+  }
 }
