--- a/front-end/my-app/src/App.css
+++ b/front-end/my-app/src/App.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;  
+  margin: 0;
+  padding: 0;
+  background: #000;
+  height: 100vh;
 }
 
 .App-logo {
@@ -14,10 +18,10 @@
 }
 
 .App-header {
-  min-height: 100vh;
+  /* min-height: 100vh; */
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: top;
   justify-content: top;
   font-size: calc(10px + 2vmin);
   color: white;
@@ -54,7 +58,7 @@
   align-items: center;
 }
 
-.vid {
+/* .vid {
   position: absolute;
   width: 100%;
   left: 50%;
@@ -63,21 +67,20 @@
   object-fit: cover;
   transform: translate(-50%, -50%);
   z-index: -1;
-}
+} */
 
 .pulse {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  width: 200%;
-  height: 200%;
-  background: url(/Users/tappy/Byte/Phase_3_Project/front-end/my-app/src/components/images/earth.png);
+  transform: translate(-50%,-50%);
+  width: 200px;
+  height: 200px;
+  background: url(./components/images/earth.png);
   background-size: cover;
-  animation: animateEarth 6s linear infinite;
+  animation: animateEarth infinite 6s linear;
   border-radius: 50%;
-  box-shadow: inset 0 0 40px  rgba(255, 255, 255, .5);
-  z-index: 0;
+  box-shadow: inset 0 0 40px  rgba(255,255,255,.5);
 }
 
 @keyframes animateEarth
