backend routes working for saving countries

--- a/front-end/my-app/src/components/Tracker/Tracker.css
+++ b/front-end/my-app/src/components/Tracker/Tracker.css
@@ -15,6 +15,10 @@
   .app_dropdown {
     background-color: white;
   }
+
+  .app_dropdown1 {
+      background-color: white;
+  }
   
   .app_header > h1 {
     color: #870000;
