--- a/front-end/my-app/src/components/InfoBox/InfoBox.css
+++ b/front-end/my-app/src/components/InfoBox/InfoBox.css
@@ -8,25 +8,27 @@
   }
   
   .infoBox--selected {
-    border-top: 10px solid rgb(230, 65, 251);
+    /* border-top: 10px solid rgb(230, 65, 251); */
+    border-top: 10px solid greenyellow;
   }
   
   .infoBox--red {
-    border-color: red;
+    border-color:red;
   }
   
-  .infoBox_cases--green {
-    color: lightgreen !important;
+  .infoBox__cases--green {
+    /* color: lightgreen !important; */
+    color: red !important;
   }
   
-  .infoBox_cases {
+  .infoBox__cases {
     color: #cc1034;
     font-weight: 600;
     font-size: 1.75rem;
     margin-bottom: 0.5rem;
   }
   
-  .infoBox_total {
+  .infoBox__total {
     color: #6c757d;
     font-weight: 700 !important;
     font-size: 0.8rem !important;
