--- a/front-end/my-app/src/App.css
+++ b/front-end/my-app/src/App.css
@@ -6,7 +6,7 @@
   background: url(./components/images/SpaceStars.jpg);
   background-size: cover;
   animation: animatebg 60s linear infinite;
-
+  overflow: scroll;
 }
 
 .pulse {
@@ -134,6 +134,12 @@ nav {
 .top-nav-icon {
   height: 50px;
   width: 50px;
+  margin-top: 15px;
+}
+
+.logo {
+  height: 75px;
+  width: 75px;
   margin-top: 15px;
 }
 
